syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesdeployment.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetesdeployment/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetesdeployment/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//microservice-kubernetes
message KubernetesDeployment {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesDeployment'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesDeploymentSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesDeploymentStatus status = 5;
}

//microservice-kubernetes-status
message KubernetesDeploymentStatus {
  //stack-outputs
  KubernetesDeploymentStackOutputs outputs = 1;
}
